k8s/apps/plex/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
spec:
  type: ClusterIP
  selector:
    app: plex
  ports:
    - name: http
      port: 32400
      targetPort: 32400
