k8s/apps/plex/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  labels:
    app: plex
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - plex.home.arpa
      secretName: home-arpa-tls
  rules:
    - host: plex.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
